--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,7 +136,8 @@ img{
 }
 
 .home__container{
-  height: calc(100vh - var(--header-height));
+/*   height: calc(100vh - var(--header-height)); */
+   height: calc(75vh - var(--header-height));
   grid-template-rows: repeat(2, max-content);
   row-gap: 1.5rem;
 }
