--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -163,7 +163,7 @@ img{
 .home__title{
   font-size: var(--big-font-size);
   line-height: 1.3;
-  margin-bottom: 1rem;
+/*   margin-bottom: 1rem; */
 }
 
 .home__description{
