--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -162,7 +162,8 @@ img{
 
 .home__title{
   font-size: var(--big-font-size);
-  line-height: 1.3;
+/*   line-height: 1.3; */
+  line-height: 1.01em;
 /*   margin-bottom: 1rem; */
 }
 
